--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -316,11 +316,9 @@ header .logo{
 /* conter section end */
 /* destination section start */
 
-/* destination section end */
-
 .destination{
     position: relative;
-    height:620px;
+    height:700px;
 }
 
 .destination .owl-dest{
@@ -347,6 +345,51 @@ header .logo{
     height: 450px;
     border-radius: 15px;
 }
+
+/* destination section end */
+
+/* testimonial section start */
+.testimonial{
+    position: relative;
+    background: #f8f9fa;
+    height: 450px;
+    width: 100%;
+  }
+
+  .owl-test{
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    width: 1000px;
+    top: 120px;
+    margin-left: 250px;
+    margin-top: 20px;
+  }
+
+  
+
+  .card-img img{
+    width: 150px !important;
+    height: 150px;
+    border-radius: 50px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .item{
+    text-align: center;
+  }
+
+  .item h3{
+    font-size: 20px;
+    padding-top: 10px;
+  }
+  .card p{
+     width: 400px;
+     padding: 10px;
+  }
+
+/* testimonial section end */
 
 /* offer section start */
 .offer{
@@ -379,6 +422,135 @@ header .logo{
     margin-top: 5px;
 }
 /* offer section end */
+
+/* tour-video section start */
+.tour-video{
+    position: relative;
+    display: flex;
+    margin-top: 200px;
+
+}
+
+.video{
+    margin-left: 200px;
+    width: 550px;
+    height: 600px;
+}
+
+.video img{
+    width: 550px;
+    height: 600px;
+}
+
+.video-content{
+
+    margin-top: 75px;
+    margin-left: 35px;
+    line-height: 20px;
+}
+
+.list{
+    display: flex;
+    margin-top: 30px;
+}
+
+.list ul{
+   
+    margin-left: 20px;
+}
+
+.list ul li{
+   list-style: circle;
+   padding: 5px  ;
+}
+
+.btn{
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background: #1A374D;
+    border-radius: 15px;
+    font-size: 16px;
+    color: #fff;
+    margin-top: 15px;
+    margin-left: 20px;
+    cursor: pointer;
+}
+
+/* tour-video section end */
+ /* contact section start */
+
+.contact{
+    background: #1A374D;
+    color: #fff;
+}
+
+.cbtn{
+    border: 2px solid #fff;
+}
+ 
+
+.cbtn:hover{
+    background: #fff;
+    color: #1A374D;
+}
+
+/* contact section end */
+ /* footer section start */
+
+.footer{
+    display: flex;
+    position: relative;
+    margin-left: 100px;
+}
+
+h5{
+    font-size: 16px;
+    font-weight: 500;
+}
+.about {
+    
+    flex: 200px 0 0 0;
+    width: 400px;
+    margin-left: 40px;
+    margin-right: 30px;
+
+}
+.pages{
+    flex: 200px 0 0 0;
+    width: 200px;
+    margin-left: 40px;
+    margin-right: 30px;
+}
+.resources{
+    flex: 200px 0 0 0;
+    width: 200px;
+    margin-left: 40px;
+}
+.con{
+    flex: 200px 0 0 0;
+    width: 350px;
+    margin-left: 10px;
+}
+
+.flist{
+    list-style: none;
+    padding-top: 10px;
+}
+
+.flist li{
+    line-height: 30px;
+}
+
+.flist li:hover{
+   text-decoration: underline;
+}
+
+.flist-icon{
+    margin-right: 20px;
+}
+ /* footer section end */
 
 
 
